--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -25,5 +25,14 @@ main {
     bottom: 100%;
     left: 0%;
     transition: all 1s;
-    font-size: 2rem;
+    font-size: 2.5rem;
+}
+
+#calculator-result-value {
+    font-size: 0.65rem;
+    position: absolute;
+    bottom: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
 }
