--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -36,3 +36,13 @@ main {
     transform: translate(-50%, -50%);
     color: black;
 }
+
+.blink {
+    animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
