--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -1,12 +1,3 @@
-html,
-body {
-    height: 100vh;
-}
-
-main {
-    height: 100vh;
-}
-
 #section-calculator {
     height: 100%;
 }
@@ -46,3 +37,14 @@ main {
         opacity: 0;
     }
 }
+
+@include media-breakpoint-up(sm) {
+    #section-calculator .calculator-wrapper {
+        width: 100%;
+        max-width: 50%;
+    }
+}
+@include media-breakpoint-up(md) { ... }
+@include media-breakpoint-up(lg) { ... }
+@include media-breakpoint-up(xl) { ... }
+@include media-breakpoint-up(xxl) { ... }
