--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -33,13 +33,27 @@
     }
 }
 
-@include media-breakpoint-up(sm) {
-    #section-calculator .calculator-wrapper {
-        width: 100%;
+#section-calculator .calculator-wrapper {
+    width: 100%;
+    @include media-breakpoint-up(lg) {
         max-width: 50%;
     }
 }
-@include media-breakpoint-up(md) { ... }
-@include media-breakpoint-up(lg) { ... }
-@include media-breakpoint-up(xl) { ... }
-@include media-breakpoint-up(xxl) { ... }
+
+@include media-breakpoint-up(sm) {}
+
+@include media-breakpoint-up(md) {
+    ...
+}
+
+@include media-breakpoint-up(lg) {
+    ...
+}
+
+@include media-breakpoint-up(xl) {
+    ...
+}
+
+@include media-breakpoint-up(xxl) {
+    ...
+}
