--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -37,35 +37,35 @@
     width: 100%;
 }
 
-@media (max-width: var(--bs-breakpoint-sm)){
+@media (max-width: 576px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: var(--bs-breakpoint-md)){
+@media (max-width: 768px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: var(--bs-breakpoint-lg)){
+@media (max-width: 992px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: var(--bs-breakpoint-xl)){
+@media (max-width: 1200px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: var(--bs-breakpoint-xll)){
+@media (max-width: 1400px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
