--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -37,35 +37,35 @@
     width: 100%;
 }
 
-@media (max-width: 576px){
+@media (min-width: 576px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: 768px){
+@media (min-width: 768px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: 992px){
+@media (min-width: 992px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: 1200px){
+@media (min-width: 1200px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
     }
 }
 
-@media (max-width: 1400px){
+@media (min-width: 1400px){
 
     #section-calculator .calculator-wrapper {
         max-width: 50%;
