--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -48,6 +48,19 @@
     width: 100%;
 }
 
+#calculator-result {
+    display: none;
+    height: 0;
+    opacity: 0;
+    transition: all 1s;
+}
+
+#calculator-result.show {
+    display: block;
+    height: 100%;
+    opacity: 1;
+}
+
 @media (min-width: 576px) {}
 
 @media (min-width: 768px) {
