--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -61,6 +61,10 @@
     display: block;
 }
 
+.progress-bar.active {
+    box-shadow: inset 1px 1px 10px 1px rgba(var(--bs-info-rgb), 1);
+}
+
 @media (min-width: 576px) {}
 
 @media (min-width: 768px) {
