--- a/assets/Css/ImcCalculator.css
+++ b/assets/Css/ImcCalculator.css
@@ -12,27 +12,10 @@
 }
 
 #imc-calculator-result .imc-calculator-graph {
-    height: 5px;
+    height: .8rem;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-#calculator-result-bar {
-    position: relative;
-}
-
-.calculator-result-marker {
+#imc-calculator-result-marker {
     position: absolute;
     bottom: 100%;
     left: 0%;
@@ -41,7 +24,7 @@
     transform: translateX(-55%);
 }
 
-#calculator-result-value {
+#imc-calculator-result-marker > span {
     font-size: 0.65rem;
     position: absolute;
     bottom: 35%;
@@ -50,18 +33,22 @@
     color: #fff;
 }
 
-.blink {
+#imc-calculator-result-marker.blink {
     animation: blinker 1s linear infinite;
+}
+
+#imc-calculator-result-marker.pulse {
+    animation: pulse 1s linear infinite;
+}
+
+.imc-calculator-graph.active {
+    animation: sparkling 1s linear infinite;
 }
 
 @keyframes blinker {
     50% {
         opacity: 0;
     }
-}
-
-.pulse {
-    animation: pulse 1s linear infinite;
 }
 
 @keyframes pulse {
@@ -80,9 +67,6 @@
     width: 100%;
 }
 
-.progress-bar.active {
-    animation: sparkling 1s linear infinite;
-}
 
 @media (min-width: 576px) {}
 
